COMMERCE-1757 minium dropdown z-index fixed

--- a/commerce-theme-minium/commerce-theme-minium/static-version/src/styles/overrides/_base.scss
+++ b/commerce-theme-minium/commerce-theme-minium/static-version/src/styles/overrides/_base.scss
@@ -16,3 +16,7 @@ button {
 	background: none;
 	border: none;
 }
+
+.dropdown-menu {
+	z-index: 1200;
+}
